# spacetimedb-python-sdk

./: BSATN_BRIDGE_100_PERCENT_COMPLETE.md  BSATN_STATUS.md  CIRCULAR_IMPORT_FIX_VERIFICATION_COMPLETE.md  CLI_INTEGRATION_SUMMARY.md  Cargo.toml  ENHANCED_BSATN_BRIDGE_COMPLETE.md  IMPLEMENTATION_PLAN_cli_and_performance.md  IMPLEMENTATION_PLAN_protocol_modernization.md  IMPLEMENTATION_PLAN_security_authentication.md  PROF2_COMPLETION_REPORT.md  PROFESSIONAL_GRADE_STATUS_REPORT.md  PROTOCOL_MODERNIZATION_STATUS.md  PYODIDE_BRIDGE_FOUNDATION_COMPLETE.md  PYTHON_CODEGEN_EXAMPLES.md  README.md  SECURITY_FEATURES_SUMMARY.md  TASK_1_CIRCULAR_IMPORT_ANALYSIS_COMPLETE.md  TASK_2_CIRCULAR_IMPORT_FIX_COMPLETE.md  TASK_3_FIX_CONNECTION_POOL_IMPORTS_COMPLETE.md  TASK_4_REMOVE_TEST_FIXTURES_FROM_MAIN_COMPLETE.md  TASK_5_LAZY_IMPORT_PATTERN_COMPLETE.md  TASK_COMPLETION_SUMMARY.md  TASK_SUMMARY_protocol_bsatn.md  TASK_SUMMARY_task-4.md  TASK_SUMMARY_ts-parity-10.md  TASK_SUMMARY_ts-parity-12.md  TASK_SUMMARY_ts-parity-13.md  TASK_SUMMARY_ts-parity-14.md  TASK_SUMMARY_ts-parity-20.md  TEST_HANG_FIX_SUMMARY.md  TS_PARITY_TASK_1_COMPLETED.md  TS_PARITY_TASK_2_COMPLETED.md  TS_PARITY_TASK_3_COMPLETED.md  analyze_circular_imports.py  circular_import_analysis.json  circular_import_analysis_detailed.md  demo_bsatn_compatibility.py  demo_subscription_builder.py  example_task3_usage.py  example_task5_lazy_import.py  (+73 more)
docs/: json-api-vs-websocket.md
examples/: algebraic_types_example.py  bsatn_protocol_example.py  collections_integration_example.py  connection_builder_example.py  utils_example.py  (+15 more)
(+57 files in other folders)
