[package]
name = "test_codegen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_codegen_direct"
path = "test_codegen_direct.rs"

[dependencies]
spacetimedb-codegen = { path = "../SpacetimeDB/crates/codegen" }
spacetimedb-schema = { path = "../SpacetimeDB/crates/schema" }
spacetimedb-lib = { path = "../SpacetimeDB/crates/lib" }
anyhow = "1.0"
